--- a/res/values/reloaded_strings.xml
+++ b/res/values/reloaded_strings.xml
@@ -21,9 +21,16 @@
 
     <!--Build date-->
     <string name="build_date">Build date</string>
-    
+
     <!-- Theme customization -->
     <string name="theme_customization_accent_color_title">Accent color</string>
     <string name="theme_customization_font_title">Headline / Body font</string>
     <string name="theme_customization_icon_shape_title">Icon shape</string>
+
+    <!-- Incall vibrate options -->
+    <string name="incall_vibration_category">In-call vibration options</string>
+    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
+    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
+    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
+
 </resources>
