Settings: Bring back selinux version
- Adapted to Q

This includes the work previously done by Fan Zhang <zhfan@google.com> since it was introduced in 2012.

Change-Id: Ic371a9ef0055b559eb0b6ff2791291fb82e408cf
Signed-off-by: Ritesh Saxena <riteshsax007@gmail.com>

--- a/res/values/reloaded_strings.xml
+++ b/res/values/reloaded_strings.xml
@@ -22,6 +22,12 @@
     <!--Build date-->
     <string name="build_date">Build date</string>
 
+    <!-- Selinux -->
+    <string name="selinux_status">SELinux status</string>
+    <string name="selinux_status_disabled">Disabled</string>
+    <string name="selinux_status_permissive">Permissive</string>
+    <string name="selinux_status_enforcing">Enforcing</string>
+
     <!-- Theme customization -->
     <string name="theme_customization_accent_color_title">Accent color</string>
     <string name="theme_customization_font_title">Headline / Body font</string>
