--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -190,7 +190,7 @@
         android:summary="@string/summary_placeholder"
         settings:allowDividerAbove="true"
         settings:enableCopying="true"
-	settings:controller="com.android.settings.deviceinfo.BuildDatePreferenceController"/>
+        settings:controller="com.android.settings.deviceinfo.BuildDatePreferenceController"/>
 
     <!-- Build number -->
     <Preference
@@ -200,6 +200,16 @@
         android:summary="@string/summary_placeholder"
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.BuildNumberPreferenceController"/>
+
+    <!-- SELinux status information -->
+    <Preference
+        android:key="selinux_status"
+        android:order="55"
+        android:title="@string/selinux_status"
+        android:summary="@string/summary_placeholder"
+        android:selectable="false"
+        settings:enableCopying="false"
+        settings:controller="com.android.settings.deviceinfo.SELinuxStatusPreferenceController"/>
 
     <!-- Software version -->
     <Preference
