--- a/res/values/reloaded_strings.xml
+++ b/res/values/reloaded_strings.xml
@@ -21,4 +21,9 @@
 
     <!--Build date-->
     <string name="build_date">Build date</string>
+    
+    <!-- Theme customization -->
+    <string name="theme_customization_accent_color_title">Accent color</string>
+    <string name="theme_customization_font_title">Headline / Body font</string>
+    <string name="theme_customization_icon_shape_title">Icon shape</string>
 </resources>
