Settings: Add navbar layout inversion dialog preference
Change-Id: I01186251a33cc501e3743122995e0ee2b3128b42
Signed-off-by: rituj <ritujbeniwal@gmail.com>

--- a/res/values/reloaded_strings.xml
+++ b/res/values/reloaded_strings.xml
@@ -41,4 +41,8 @@
     <string name="back_height_high_label">Bottom</string>
     <string name="back_options_dialog_title">Options</string>
     <string name="back_height_message">Amount of screen height used as touchable region for back gesture.</string>
+
+    <!-- Navbar options -->
+    <string name="navbar_invert_layout_title">Invert Navigation Bar layout</string>
+    <string name="navbar_invert_info">This will swap the \"Back\" and \"Recents\" buttons on the navigation bar</string>
 </resources>
